# src/index.ts
@@ -1,7 +1,7 @@
 import express, { type Request, type Response } from "express";
 import swaggerRouter from "./routes/swagger.router.js";
 import cors from "cors";
-import pool from "./config/db.js";
+import productsRouter from "./routes/product.routes.js";
 
 const port = process.env.PORT;
 
@@ -11,26 +11,16 @@ const app = express();
 app.use(express.json());
 app.use(cors());
 
+app.use("/api", productsRouter);
 app.use("/api/docs", swaggerRouter);
 
 app.get("/", (req: Request, res: Response) => {
   /*#swagger.tags = ['Tests']*/
+
   res.json({
     status: "Server online",
     version: "1.0.0",
   });
-});
-
-app.get("/api/menu", async (req: Request, res: Response) => {
-  try {
-    const result = await pool.query("SELECT * FROM products");
-    res.json(result.rows);
-  } catch (error) {
-    console.error(error);
-    res.status(500).json({
-      error: "Error al obtener el menú",
-    });
-  }
 });
 
 app.listen(port, () => {
