# src/routes/product.routes.ts
@@ -1,0 +1,20 @@
+import { Router } from "express";
+
+import {
+  getMenu,
+  getProduct,
+  createProduct,
+  updateProduct,
+} from "../controllers/product.controller.js";
+
+const router: Router = Router();
+
+router.get("/menu", getMenu);
+
+router.get("/menu/:id", getProduct);
+
+router.post("/menu", createProduct);
+
+router.put("/menu/:id", updateProduct);
+
+export default router;
